--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name = "background">#333333</color>
     <color name = "backgroundButtonModel">#4D4D4D</color>
     <color name = "textColor">#B3B3B3</color>
-    <color name = "selectedText">#B3B3B3</color>
+    <color name = "selectedText">#39B54A</color>
 
 </resources>
